[Fix] change input format

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -158,12 +158,12 @@
 
     <ion-item>
       <ion-label floating>Renspa Origen</ion-label>
-      <ion-input formControlName="res_origin" type="number"></ion-input>
+      <ion-input formControlName="res_origin" type="text"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Renspa Destino</ion-label>
-      <ion-input formControlName="res_destiny" type="number"></ion-input>
+      <ion-input formControlName="res_destiny" type="text"></ion-input>
     </ion-item>
 
    </form>
